ARROW-3843: [C++][Python] Allow a "degenerate" Parquet file with no columns

Author: Wes McKinney <wesm+git@apache.org>

Closes #3985 from wesm/ARROW-3843 and squashes the following commits:

2aba9262d <Wes McKinney> Add C++ unit test for zero-columns. Distinguish from degenerate root node
1588a08b0 <Wes McKinney> Allow a degenerate Parquet file with no columns